---
source: crates/ruff/src/rules/flake8_bandit/mod.rs
expression: diagnostics
---
- kind:
    name: SnmpWeakCryptography
    body: "You should not use SNMPv3 without encryption. `noAuthNoPriv` & `authNoPriv` is insecure."
    commit: ~
    fixable: false
  location:
    row: 4
    column: 11
  end_location:
    row: 4
    column: 22
  fix: ~
  parent: ~
- kind:
    name: SnmpWeakCryptography
    body: "You should not use SNMPv3 without encryption. `noAuthNoPriv` & `authNoPriv` is insecure."
    commit: ~
    fixable: false
  location:
    row: 5
    column: 15
  end_location:
    row: 5
    column: 26
  fix: ~
  parent: ~

